Update Dashboard js and user